force-app/main/default/objects/JSON_Object_Mapping__mdt/JSON_Object_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>JSON Object Mapping</label>
    <pluralLabel>JSON Object Mappings</pluralLabel>
</CustomObject>