force-app/main/default/objects/JSON_Object_Mapping__mdt/fields/JSON_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>JSON_Object_Name__c</fullName>
    <label>JSON Object Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>