force-app/main/default/objects/JSON_Object_Mapping__mdt/fields/Object_Insertion_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Object_Insertion_Sequence__c</fullName>
    <label>Object Insertion Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>